--- a/style.css
+++ b/style.css
@@ -150,37 +150,37 @@ img.logo3 {
     margin-bottom: 5rem;
 }
 
-.slick-next, .slick-prev {
-    border-radius: 35px;
-    font-size: 0;
-    line-height: 0;
-    position: absolute;
-    top: 100%;
-    display: block;
-    width: 30px;
-    height: 30px;
-    padding: 0;
-    -webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    cursor: pointer;
-    color: black;
-    border: none;
-    outline: none;
-    background:cadetblue;
-}
+/*.slick-next, .slick-prev {*/
+/*    border-radius: 35px;*/
+/*    font-size: 0;*/
+/*    line-height: 0;*/
+/*    position: absolute;*/
+/*    top: 100%;*/
+/*    display: block;*/
+/*    width: 30px;*/
+/*    height: 30px;*/
+/*    padding: 0;*/
+/*    -webkit-transform: translate(0, -50%);*/
+/*    -ms-transform: translate(0, -50%);*/
+/*    transform: translate(0, -50%);*/
+/*    cursor: pointer;*/
+/*    color: black;*/
+/*    border: none;*/
+/*    outline: none;*/
+/*    background:cadetblue;*/
+/*}*/
 
-.slick-prev:hover, .slick-next:hover{
-    background:cadetblue;
-}
+/*.slick-prev:hover, .slick-next:hover{*/
+/*    background:cadetblue;*/
+/*}*/
 
-.slick-prev {
-    left: 3%;
-}
+/*.slick-prev {*/
+/*    left: 3%;*/
+/*}*/
 
-.slick-next{
-    right: 3%;
-}
+/*.slick-next{*/
+/*    right: 3%;*/
+/*}*/
 
 /*Version mobile */
 @media screen and (max-width: 1024px) {
